@startuml
hide circle
skinparam linetype ortho
skinparam entity {
  BackgroundColor #F8FAFC
  BorderColor #334155
}

entity "users" as users {
  * id : INTEGER <<PK>>
  --
  email : TEXT <<UNIQUE, NOT NULL>>
  password_hash : TEXT <<NOT NULL>>
  full_name : TEXT <<NOT NULL>>
  role : TEXT <<NOT NULL>>
  security_question : TEXT
  security_answer_hash : TEXT
  created_at : DATETIME
  updated_at : DATETIME
}

entity "rooms" as rooms {
  * id : INTEGER <<PK>>
  --
  room_number : TEXT <<UNIQUE, NOT NULL>>
  room_name : TEXT <<NOT NULL>>
  room_type : TEXT <<NOT NULL>>
  price_per_night : REAL <<NOT NULL>>
  max_guests : INTEGER <<NOT NULL>>
  status : TEXT <<NOT NULL>>
  description : TEXT
  image_url : TEXT
  floor : TEXT
  wing : TEXT
  created_at : DATETIME
}

entity "customers" as customers {
  * id : INTEGER <<PK>>
  --
  user_id : INTEGER <<FK users.id, NULLABLE>>
  full_name : TEXT <<NOT NULL>>
  email : TEXT <<UNIQUE, NOT NULL>>
  phone : TEXT
  id_card : TEXT
  nationality : TEXT
  tier : TEXT
  total_spent : REAL
  total_bookings : INTEGER
  status : TEXT
  created_at : DATETIME
  updated_at : DATETIME
}

entity "bookings" as bookings {
  * id : INTEGER <<PK>>
  --
  booking_code : TEXT <<UNIQUE, NOT NULL>>
  customer_id : INTEGER <<FK customers.id, NOT NULL>>
  room_id : INTEGER <<FK rooms.id, NOT NULL>>
  check_in_date : DATE <<NOT NULL>>
  check_out_date : DATE <<NOT NULL>>
  num_guests : INTEGER <<NOT NULL>>
  status : TEXT <<NOT NULL>>
  total_amount : REAL <<NOT NULL>>
  notes : TEXT
  created_at : DATETIME
  updated_at : DATETIME
}

entity "payments" as payments {
  * id : INTEGER <<PK>>
  --
  booking_id : INTEGER <<FK bookings.id, NOT NULL>>
  amount : REAL <<NOT NULL>>
  payment_method : TEXT
  status : TEXT
  payment_date : DATETIME
  transaction_ref : TEXT
  created_at : DATETIME
}

users ||--o{ customers : "users.id = customers.user_id (nullable)"
customers ||--o{ bookings : "customers.id = bookings.customer_id"
rooms ||--o{ bookings : "rooms.id = bookings.room_id"
bookings ||--o{ payments : "bookings.id = payments.booking_id"

note right of customers
  user_id is optional.
  Customer rows can be created
  by admin/staff without an
  attached user account.
end note

note right of bookings
  Constraints:
  - check_out_date > check_in_date
  - status in pending/confirmed/checked_in/checked_out/cancelled
  - customer_id ON DELETE RESTRICT
  - room_id ON DELETE RESTRICT
end note

note right of rooms
  status in available/occupied/cleaning/maintenance
end note

note right of payments
  status in pending/completed/refunded
  payment_method in cash/card/transfer
  booking_id ON DELETE CASCADE
end note

note right of users
  role in admin/staff/customer
end note

note left of customers
  user_id references users.id
  with ON DELETE SET NULL
end note

@enduml
